# ScanSync

./: .flake8  .gitignore  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  eslint.config.mjs  merged_requirements.in  package-lock.json  package.json  rabbitmq.conf  requirements-dev.txt  requirements_files.txt  run-tests.sh  update.sh
.github/: copilot-instructions.md
detection-service/: main.py  requirements.txt
detection_service/: Dockerfile  main.py  requirements.txt
file_naming_service/: Dockerfile  main.py  ollama_filename.py  requirements.txt
metadata_service/: Dockerfile  main.py  requirements.txt
ocr-service/: main.py  requirements.txt
ocr_service/: Dockerfile  main.py  requirements.txt
openai_service/: Dockerfile  main.py  requirements.txt
scansynclib/: pyproject.toml
scansynclib/scansynclib/: ProcessItem.py  cleanup.py  config.json  config.py  helpers.py  logging.py  ollama_helper.py  ollama_settings.py  onedrive_api.py  onedrive_settings.py  onedrive_smb_manager.py  openai_helper.py  openai_settings.py  rabbitmq.py  settings.py  settings_schema.py  sqlite_wrapper.py
scansynclib/scansynclib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scansynclib/scansynclib/db/: schema.sql
shared/: ProcessItem.py  config.json  config.py  helpers.py  logging.py  onedrive_api.py  onedrive_settings.py  onedrive_smb_manager.py  openai_helper.py  openai_settings.py  sqlite_wrapper.py
smb_service/: Dockerfile  smb.conf
test_service/: Dockerfile  requirements.txt
tests/: conftest.py  test_advanced_settings_web.py  (+15 more)
(+65 files in other folders)
